--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -421,6 +421,7 @@ components:
     FieldMetadata:
       title: Field Metadata
       type: object
+      description: Metadata about a field. Please note that different providers have different levels of support for field metadata. Please reach out to support@withampersand.com if need expanded support for a particular provider.
       required:
         - fieldName
         - displayName
