--- a/api/read.yaml
+++ b/api/read.yaml
@@ -9,7 +9,7 @@ paths:
     post:
       summary: Trigger a read
       description:
-        Triggers reading data from a SaaS instance. See [Trigger a read](https://docs.withampersand.com/define-integrations/read-actions#trigger-a-read) for details.
+        Triggers reading data from a SaaS instance. See [Trigger a read](https://docs.withampersand.com/define-integrations/read-actions#trigger-a-read) for details. If you want scheduled reads or automatic backfills instead, you [can define them in the manifest](https://docs.withampersand.com/read-actions#defining-reads).
       operationId: triggerRead
       tags: ["Read"]
       parameters:
@@ -116,7 +116,7 @@ paths:
   /projects/{projectIdOrName}/integrations/{integrationId}/installations/{installationId}:pause:
     post:
       summary: Pause reads for an installation
-      description: Pauses all reads for an installation. If reads are already paused, this will be a no-op. Accepts specific objects to pause reads for in the request body.
+      description: Pauses all scheduled reads for an installation. If reads are already paused, this will be a no-op. Accepts specific objects to pause reads for in the request body.
       operationId: pauseReads
       tags: ["Read"]
       parameters:
@@ -173,7 +173,7 @@ paths:
   /projects/{projectIdOrName}/integrations/{integrationId}/installations/{installationId}:unpause:
     post:
       summary: Unpause reads for an installation
-      description: Unpauses all reads for an installation. If no reads were paused, this will be a no-op. Accepts specific objects to unpause reads for in the request body.
+      description: Unpauses all scheduled reads for an installation. If no reads were paused, this will be a no-op. Accepts specific objects to unpause reads for in the request body.
       operationId: unpauseReads
       tags: ["Read"]
       parameters:
