--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1042,7 +1042,7 @@ paths:
       tags: ["Installation"]
       parameters:
         - name: projectIdOrName
-          in: path
+          in: pathn
           required: true
           description: The Ampersand project ID or project name.
           schema:
@@ -1154,7 +1154,6 @@ paths:
                   description: |
                     Array of field paths specifying which fields to update. Allowed values include:
                     - connectionId
-                    - config.revisionId
                     - config.createdBy
                     - config.content.read.objects.<object-name>
                     - config.content.write.objects.<object-name>
