--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3414,6 +3414,139 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
 
+  # Domain Claiming API - Development endpoint (excluded from docs)
+  /claimed-domains:
+    get:
+      operationId: checkClaimedDomain
+      summary: Check if a domain is claimed
+      description: Check if a domain is claimed by an organization. Accepts email, domain, or URL - will automatically extract and sanitize the domain for comparison.
+      tags: ["Domain Claiming"]
+      x-excluded: true
+      parameters:
+        - name: domain
+          in: query
+          required: true
+          schema:
+            type: string
+          description: Email address, domain name, or URL to check. The domain will be extracted and sanitized automatically.
+          example: rajat@withampersand.com
+      responses:
+        200:
+          description: Domain claim status
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClaimedDomainResponse"
+        400:
+          description: Bad Request - Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/InputValidationProblem"
+        404:
+          description: Domain not claimed
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+    post:
+      operationId: claimDomain
+      summary: Claim a domain
+      description: Claim a domain for an organization. Accepts email, domain, or URL - will automatically extract and sanitize the domain.
+      tags: ["Domain Claiming"]
+      x-excluded: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - domain
+                - parentId
+                - parentType
+              properties:
+                domain:
+                  type: string
+                  description: Email address, domain name, or URL to claim. The domain will be extracted and sanitized automatically.
+                  example: joe@apple.com
+                parentId:
+                  type: string
+                  description: ID of the parent entity claiming the domain
+                  example: orgId
+                parentType:
+                  type: string
+                  description: Type of the parent entity
+                  example: org
+        required: true
+      responses:
+        201:
+          description: Domain claimed successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClaimedDomainResponse"
+        400:
+          description: Bad Request - Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/InputValidationProblem"
+        409:
+          description: Domain already claimed
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+
+  /orgs/{orgId}/claimed-domains:
+    get:
+      operationId: listOrgClaimedDomains
+      summary: List organization's claimed domains
+      description: Get all domains claimed by a specific organization
+      tags: ["Domain Claiming"]
+      x-excluded: true
+      parameters:
+        - name: orgId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Organization ID
+          example: orgId
+      responses:
+        200:
+          description: List of claimed domains for the organization
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ClaimedDomainResponse"
+        404:
+          description: Organization not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+
 ## Schema Components ##
 components:
   schemas:
@@ -4836,6 +4969,31 @@ components:
       required:
         - fieldName
         - action
+
+    ClaimedDomainResponse:
+      type: object
+      required:
+        - id
+        - parentType
+        - parentId
+        - domain
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the claimed domain
+          example: xyz
+        parentType:
+          type: string
+          description: Type of the parent entity that claimed the domain
+          example: org
+        parentId:
+          type: string
+          description: ID of the parent entity that claimed the domain
+          example: orgId
+        domain:
+          type: string
+          description: The normalized domain name
+          example: apple.com
 
   securitySchemes:
     APIKeyHeader:
