add dynamic mappings structure

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -91,6 +91,11 @@ components:
           x-go-type-skip-optional-pointer: true
           additionalProperties:
             $ref: '#/components/schemas/SelectedValueMappings'
+        dynamicFieldMappings:
+          type: object
+          description: Stores information about dynamic field mappings.
+          additionalProperties:
+            $ref: '#/components/schemas/DynamicFieldMappings'
         selectedFieldMappings:
           type: object
           description: This is a map of mapToNames to field names. (A mapTo name is the name the builder wants to map a field to when it lands in their destination.)
@@ -113,6 +118,13 @@ components:
       x-go-type-skip-optional-pointer: true
       additionalProperties:
         type: string
+
+    DynamicFieldMappings:
+      title: Dynamic Field Mappings
+      type: array
+      description: An array of field mapping entries for dynamic field mappings.
+      items:
+        $ref: '#/components/schemas/FieldMappingEntry'
 
     BaseWriteConfig:
       title: Base Write Config
@@ -399,6 +411,42 @@ components:
         booleanValue:
           type: boolean
           description: The default boolean value to apply to a field
+
+    FieldMappingEntry:
+      title: Field Mapping Entry
+      type: object
+      required:
+        - mapToName
+      properties:
+        mapToName:
+          type: string
+          description: The name of the field in your application.
+        mapToDisplayName:
+          type: string
+          description: Optional display name of the field to show the user in the mapping UI.
+        prompt:
+          type: string
+          description: Optional prompt to show the user in the mapping UI.
+        mappedValues:
+          type: array
+          description: If you would like the user to map a set of possible values, this is the list of possible values of the field in your application.
+          items:
+            $ref: '#/components/schemas/MappedValue'
+        fieldName:
+          type: string
+          description: The name of the field in SaaS provider, if present, then we will not prompt the user to map the field.
+
+    MappedValue:
+      title: Mapped Value
+      type: object
+      required:
+        - mappedValue
+        - mappedDisplayValue
+      properties:
+        mappedValue:
+          type: string
+        mappedDisplayValue:
+          type: string
 
     ValueDefault:
       title: Value Default (Legacy)
