[ENG-2411] feat: define types for dynamic mappings  (#225)
* add dynamic mappings structure

* add prefix

* update name

* better desc

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -91,6 +91,8 @@ components:
           x-go-type-skip-optional-pointer: true
           additionalProperties:
             $ref: '#/components/schemas/SelectedValueMappings'
+        dynamicMappingsInput:
+          $ref: '#/components/schemas/DynamicMappingsInput'
         selectedFieldMappings:
           type: object
           description: This is a map of mapToNames to field names. (A mapTo name is the name the builder wants to map a field to when it lands in their destination.)
@@ -113,6 +115,13 @@ components:
       x-go-type-skip-optional-pointer: true
       additionalProperties:
         type: string
+
+    DynamicMappingsInput:
+      title: Dynamic Mappings Input
+      description: An array containing all available dynamic field and value mappings for this installation, provided by the InstallIntegration component. This array represents the complete set of possible mappings, regardless of which ones are currently selected. The actual selected mappings are stored separately in the selectedFieldMappings property.
+      type: array
+      items:
+        $ref: '#/components/schemas/DynamicMappingsInputEntry'
 
     BaseWriteConfig:
       title: Base Write Config
@@ -399,6 +408,42 @@ components:
         booleanValue:
           type: boolean
           description: The default boolean value to apply to a field
+
+    DynamicMappingsInputEntry:
+      title: Field Mapping Entry
+      type: object
+      required:
+        - mapToName
+      properties:
+        mapToName:
+          type: string
+          description: The name of the field in your application.
+        mapToDisplayName:
+          type: string
+          description: Optional display name of the field to show the user in the mapping UI.
+        prompt:
+          type: string
+          description: Optional prompt to show the user in the mapping UI.
+        mappedValues:
+          type: array
+          description: If you would like the user to map a set of possible values, this is the list of possible values of the field in your application.
+          items:
+            $ref: '#/components/schemas/DynamicMappingsInputMappedValue'
+        fieldName:
+          type: string
+          description: The name of the field in SaaS provider, if present, then we will not prompt the user to map the field.
+
+    DynamicMappingsInputMappedValue:
+      title: Mapped Value
+      type: object
+      required:
+        - mappedValue
+        - mappedDisplayValue
+      properties:
+        mappedValue:
+          type: string
+        mappedDisplayValue:
+          type: string
 
     ValueDefault:
       title: Value Default (Legacy)
