--- a/api/api.yaml
+++ b/api/api.yaml
@@ -3821,7 +3821,11 @@ components:
             ]
         status:
           type: string
-          description: The status of the connection.
+          description: |
+            The status of the connection.
+            - `created`: The connection has just been created or the access token was just refreshed.
+            - `working`: The connection has successfully been used to make a request.
+            - `bad_credentials`: The connection is encountered credential issues when making a request, or when attempting to refresh the access token.
           example: working
           enum: [created, working, bad_credentials]
         oauth2AuthorizationCode:
