--- a/api/api.yaml
+++ b/api/api.yaml
@@ -759,7 +759,7 @@ paths:
           required: false
           description: Whether to perform destructive actions when deploying integrations, like pausing all read actions for an object that was removed in the latest revision.
           schema:
-            type: string
+            type: boolean
       requestBody:
         required: true
         content:
