--- a/api/api.yaml
+++ b/api/api.yaml
@@ -754,6 +754,12 @@ paths:
           schema:
             type: string
           example: my-project
+        - name: destructive
+          in: query
+          required: false
+          description: Defaults to false. This flag controls whether to perform destructive actions when deploying integrations, like pausing all read actions for an object that was removed in the latest revision.
+          schema:
+            type: boolean
       requestBody:
         required: true
         content:
