--- a/api/api.yaml
+++ b/api/api.yaml
@@ -817,6 +817,12 @@ paths:
           description: The integration ID.
           schema:
             type: string
+        - name: destructive
+          in: query
+          required: false
+          description: Defaults to false. This flag controls whether to perform destructive actions when deploying integrations, like pausing all read actions for an object that was removed in the latest revision.
+          schema:
+            type: boolean
       requestBody:
         content:
           application/json:
